--- a/Sum/sum.css
+++ b/Sum/sum.css
@@ -171,7 +171,7 @@ box-shadow: inset 400px 0 0 0 rgba(235,168,118,0.4);
  max-width: 450px;
  background-blend-mode: difference;
  position: relative;
- background: url('/Sum/files/pngfind.com-transparent-glass-png-1770920.png') no-repeat;
+ background: url('/Sum/files/quote.png') no-repeat;
  overflow-y: scroll;
  max-height:  107px;
  min-height: 107px; 
