--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -257,7 +257,7 @@ overflow: hidden;
 height: 100vh; 
 width: 100%;
 overflow: hidden;
-z-index: 999;
+z-index: 999999999;
 background: rgba(0,0,0,0.3);
 }
 
