--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -392,3 +392,408 @@ opacity: 0.8;
 }
 
 
+
+.hex-player {
+width: 100%;
+background: black;
+position: relative;
+height: 100%;
+color: white;
+overflow-x: hidden;
+}
+
+.playherex {
+width: 100%;
+z-index: 9;
+background: linear-gradient(to bottom, #3e3c4a, #5e4e51, #573C41, #523338);
+padding-bottom: 30px;
+position: relative;
+}
+
+.trackrep {
+position: absolute; 
+top: 0;
+z-index: 4;
+margin-top: 6px;
+margin-left: 6px;
+}
+
+#trackrep {
+
+filter: invert(50%);
+    
+}
+.trackrep img {
+width: 25px;
+}
+
+#tracknav {
+width: 30px; 
+position: absolute;
+right: 0;
+z-index: 3;
+top: 0;
+margin: 6px 6px 0 0;
+}
+
+#tracklist {
+position: absolute;
+top: 0;
+background: rgba(0,0,0,0.8);
+color: white; 
+z-index: 2;
+width: 100%;
+height: 0;
+padding: 0 10px 0 10px;
+overflow: hidden;
+transition: ease 0.5s;
+}
+
+.alltracks {
+padding-top: 30px;
+padding-bottom: 20px;
+}
+.trackcanvas {
+margin: 10px auto 20px auto;
+display: block;
+width: 65%;
+border: lightgrey 2.5px solid;
+border-radius: 50%;
+max-width: 300px;
+aspect-ratio: 1/1;
+}
+.trackbody {
+width: 100%;
+max-width: 450px;
+display: none;
+position: relative;
+padding: 30px 0 30px 0;
+height: auto; 
+}
+#track0 {
+    display: block;
+}
+
+.trackname {
+font-weight: 600;
+margin: auto auto 0 auto; 
+display: block; 
+font-size: 20px;
+width: 80%;
+overflow: scroll;
+position: relative;
+text-align: right;
+font-family: 'Poppins' ;
+}
+
+#trackname {
+position: relative;
+white-space: nowrap;
+width: 160%;
+animation: marquet 10s linear infinite;
+}
+
+@keyframes marquet {
+  0% { left: 0; }
+  100% { left: -180%; }
+}
+
+  #trackname {
+  -ms-overflow-style: none;  
+  width: 0px !important /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+  
+  #trackname::-webkit-scrollbar {
+  display: none;
+  width: 0px !important
+}
+
+  .trackname {
+  -ms-overflow-style: none;  
+  width: 0px !important /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+  
+  .trackname::-webkit-scrollbar {
+  display: none;
+  width: 0px !important
+}
+
+
+.trackartist {
+margin: -15px 0 0 10%; 
+font-family: 'Poppins';
+font-weight: 600;
+font-size: 13px;
+opacity: 0.7;
+}
+
+.trackplay img{
+width: 35px;
+}
+
+.hexcontol {
+position: relative;
+}
+
+.playback {
+width: 40px;
+}
+
+.trackslit {
+ position: absolute;
+ bottom: 0;
+ z-index: 3;
+ width: 100%;
+ max-width: 450px;
+ font-family: 'Poppins';
+ font-size: 13px;
+ text-align: center;
+ margin: 0 0 260px 0;
+}
+
+.playslit {
+ position: absolute;
+ bottom: 0;
+ z-index:  3;
+ width: 100%;
+ max-width: 450px;
+ text-align: center;
+ margin: 0 0 210px 0;
+
+}
+
+.tcontrol {
+position: relative;
+width: 100%;
+z-index: 3;
+margin-top: 70px;
+
+}
+#playback {
+float: left;
+margin-left: 30px;
+}
+
+
+#playnext {
+float: right;
+margin-right: 30px;
+}
+
+#tracksend {
+float: right; 
+z-index: 3;
+position: absolute;
+right: 0;
+margin: -20px 10% 0 0;
+}
+
+#tracksend img{
+width: 20px;
+z-index: 3;
+}
+
+.trackplay {
+margin: auto; 
+display: block;
+padding: 5px; 
+height: 60px;
+width: 60px;
+background: white; 
+border: none;
+border-radius: 50%;
+}
+
+#trackplay {
+width: 25px;
+margin: 3px 0 0 4px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  height: 3px;
+  background: rgba(255,255,255,0.5);
+  display: block;
+  cursor: pointer;
+  width: 80%;
+  accent-color: pink;
+  margin-left: 10%;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -2.5px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+
+#hexnewprog {
+float: left;
+margin-left: 10%;
+}
+
+#hextotprog {
+float: right;
+margin-right: 10%;
+}
+
+.tracktext {
+height: 170px;
+padding-top: 30px;
+width: 100%;
+color: white;
+}
+
+.innerlyric {
+height: 100%;
+overflow: scroll;
+width: 100%;
+font-size: 16px; 
+font-family: 'Poppins';
+padding: 30px 15px 10px 15px;
+}
+
+#albumpage {
+position: absolute;
+top: 0;
+width: 100%;
+overflow-x: hidden;
+max-width: 450px;
+height: auto;
+overflow-y: scroll;
+background: black;
+color: white;
+}
+
+.alcanvas {
+margin: 20px auto auto auto;
+display: block;
+width: 200px;
+border-radius: 7px;
+aspect-ratio: 1/1;
+border: 3px lightgrey solid ;
+object-fit: cover; 
+}
+
+
+
+.albumname {
+font-weight: 600;
+margin-left: 15px; 
+display: block; 
+font-size: 20px;
+width: 100%;
+font-family: 'Poppins' ;
+}
+
+.albumartist {
+margin: -15px 0 0 15px; 
+font-family: 'Poppins';
+font-weight: 600;
+font-size: 13px;
+opacity: 0.7;
+width: calc(100% - 30px); 
+padding-bottom: 20px; 
+border-bottom: lightgrey 0.1px solid;
+}
+
+#eachtrack {
+display: flex; 
+height: 70px;
+width: 100%;
+position: relative;
+align-items: center;
+font-family: 'Poppins';
+}
+
+.abname {
+margin-left: 10px;
+width: calc(100% - 60px);
+}
+#abtitle {
+font-weight: 600;
+font-size: 15px;
+max-width: 100%;
+margin-bottom: 0px;
+opacity: 0.9;
+white-space: nowrap; 
+overflow: hidden; 
+text-overflow: ellipsis;
+}
+
+
+#abartist {
+margin-top: 3px;
+font-weight: 600;
+font-size: 12px;
+font-family: 'Rubik';
+opacity: 0.7;
+
+}
+
+#absend img {
+width: 20px; 
+z-index: 3;
+}
+
+#absend {
+position: absolute;
+right: 0;
+width: 25px;
+z-index: 3;
+margin-right: 10px;
+}
+
+.onetrack {
+display: flex; 
+height: 30px; 
+width:  calc(100% - 20px); 
+border-bottom: 0.1px lightgrey solid;
+position: relative;
+align-items: center;
+font-family: 'Poppins';
+}
+
+#onename {
+font-weight: 600;
+font-size: 15px;
+max-width: 62%;
+margin: 0 0 0 0;
+opacity: 0.9;
+white-space: nowrap; 
+overflow: hidden; 
+text-overflow: ellipsis;
+}
+
+#oneartist {
+font-weight: 600;
+font-size: 13px;
+max-width: 32%;
+position: absolute; 
+right: 0;
+margin: 0 0 0 0; 
+opacity: 0.7;
+white-space: nowrap; 
+overflow: hidden; 
+text-overflow: ellipsis;
+}
+
+
+#trackbed {
+padding: 10px; 
+font-size: 13px;
+color: white;
+height: 100px; 
+overflow: scroll;
+line-height: 25px;
+background: rgba(0,0,0,0.8);
+}
+
+
