--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -466,6 +466,7 @@ aspect-ratio: 1/1;
 width: 100%;
 max-width: 450px;
 display: none;
+overflow-x: hidden;
 position: relative;
 padding: 30px 0 30px 0;
 height: auto; 
@@ -489,7 +490,6 @@ font-family: 'Poppins' ;
 #trackname {
 position: relative;
 white-space: nowrap;
-width: 160%;
 animation: marquet 10s linear infinite;
 }
 
