--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -541,7 +541,8 @@ margin: -15px 0 0 10%;
 font-family: 'Poppins';
 font-weight: 600;
 font-size: 13px;
-opacity: 0.7;
+opacity: 0.7; 
+z-index: -1;
 }
 
 .trackplay img{
@@ -599,7 +600,8 @@ margin-right: 30px;
 
 #tracksend {
 text-align: right; 
-z-index: 3;
+z-index: 4;
+position: relative;
 margin: -25px 0 0 0;
 max-width: 450px;
 width: 98%;
@@ -608,7 +610,7 @@ width: 98%;
 #tracksend img{
 width: 20px;
 margin-right: 20px;
-z-index: 3;
+z-index: 4;
 }
 
 .trackplay {
@@ -664,7 +666,6 @@ margin-right: 10%;
 height: 170px;
 padding-top: 30px;
 width: 100%;
-color: white;
 }
 
 .innerlyric {
@@ -806,6 +807,7 @@ text-overflow: ellipsis;
 padding: 10px; 
 font-size: 13px;
 color: white;
+word-break: break-all;
 height: 100px; 
 overflow: scroll;
 line-height: 25px;
