--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -706,7 +706,9 @@ font-weight: 600;
 margin-left: 15px; 
 display: block; 
 font-size: 20px;
-width: 100%;
+white-space: wrap;
+word-wrap: wrap;
+width: calc(100% - 30px);
 font-family: 'Poppins' ;
 }
 
