--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -244,7 +244,11 @@ box-shadow: inset 400px 0 0 0 rgba(235,168,118,0.4);
   position: absolute;
 } 
 
-
+#errorhex {
+font-family: 'Poppins';
+font-size: 80%; 
+padding: 10px auto auto 5px;
+}
 
 .popbody {
 display: none;
@@ -405,15 +409,20 @@ opacity: 0.8;
 }
 
 
-
 .hex-player {
 width: 100%;
 background: black;
 position: relative;
 height: 100%;
 color: white;
-overflow-x: hidden ;
+display: block;
 overflow-x: hidden;
+}
+
+#parent-hex {
+position: absolute; 
+top: 0;
+height: 500px;
 }
 
 .playherex {
@@ -678,7 +687,7 @@ padding: 30px 15px 10px 15px;
 }
 
 #albumpage {
-position: absolute;
+position: relative;
 top: 0;
 width: 100%;
 overflow-x: hidden;
@@ -703,11 +712,11 @@ object-fit: cover;
 
 .albumname {
 font-weight: 600;
-margin-left: 15px; 
+margin-left: 15px;
+word-wrap: wrap;
+white-space: wrap;
 display: block; 
 font-size: 20px;
-white-space: wrap;
-word-wrap: wrap;
 width: calc(100% - 30px);
 font-family: 'Poppins' ;
 }
