--- a/Sum/hex.css
+++ b/Sum/hex.css
@@ -14,6 +14,208 @@
     transform: translateY(-45%);
     animation: blink 0.7s infinite;
 }
+
+.slideui-up {
+    
+    animation-name: slideuiUp;
+    animation-delay: 20%;
+    animation-duration: 3s;
+    
+}
+  @keyframes slideuiUp {
+    0%,
+    50% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    }
+
+  .slideui-down {
+    
+    animation-name: slideuiDown;
+    animation-delay: 20%;
+    animation-duration: 3s;
+    
+}
+  @keyframes slideuiDown {
+    0%,
+    50% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+   } 
+
+  .slideui-left {
+    
+    animation-name: slideuiLeft;
+    animation-delay: 20%;
+    animation-duration: 3s;
+    
+}
+  @keyframes slideuiLeft {
+    0%,
+    50% {
+      transform: translateX(100%);
+      opacity: 0;
+      overflow-x: hidden; 
+    }}
+    
+      .slideui-right {
+    
+    animation-name: slideuiRight;
+    animation-delay: 20%;
+    animation-duration: 3s;
+    
+}
+  @keyframes slideuiRight {
+    0%,
+    50% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    }
+    
+
+
+
+.setDv {
+    display: flex; 
+    align-items: center; 
+    position: relative;
+    max-width: 100%;
+    margin-left: auto; 
+    margin-right: auto; 
+    text-align: center;
+    display: block;      
+    overflow-x: hidden; 
+}
+.prepDv {
+    width: 100%; 
+    text-align: center;
+    padding: 0px 10px;
+    position: relative;
+&::before {
+    content: ''; 
+    position: absolute;
+    width: 40%;
+    left: 0;
+    border: 0.6px solid lightgrey;
+    box-sizing: border-box;
+    top: 50%;
+    transform: translateY(-50%); 
+  }
+  
+  &::after {
+    content: '';
+    overflow-x: hidden; 
+    position: absolute;
+    width: 40%;
+    right: 0;
+    border: 0.6px solid lightgrey;
+    box-sizing: border-box;
+    top: 50%;
+    transform: translateY(-50%); 
+  }
+
+}
+
+
+.prepDa {
+ 
+ &::after {
+ border-style: dashed; 
+ }
+ 
+  &::before {
+ border-style: dashed; 
+ }
+    
+}
+
+
+
+.prepD::after {
+  content: "divi";
+  color: transparent;
+  min-width: 40%;
+  position: absolute;
+  right: 0;
+  margin-top: 16px;
+  border-top: lightgrey 1px solid; 
+  border-style: dashed;  
+}
+
+.prepD::before {
+  content: "divi";
+  color: transparent;
+  min-width: 40%;
+  position: absolute;
+  left: 0;
+  margin-top: 16px; 
+  border-top: lightgrey 1px solid; 
+  border-style: dashed;  
+}
+
+
+
+.xmeterg {
+    display: flex; 
+    width: 100%;        
+    overflow: hidden; 
+    background: lightgrey; 
+    margin-bottom: 5px;
+}
+
+.meterx {
+    min-height: 100%;     
+}
+
+.onexmeter {
+display: flex; 
+    width: 100%;        
+    overflow: hidden; 
+    background: lightgrey;   
+    margin-bottom: 5px;   
+}
+
+.onexm {
+   min-height: 100%;
+}
+
+.oxlist {
+font-family: 'Poppins'; 
+padding: 0px;
+margin: 0px;
+width: 100%;
+padding: 5px 0 5px 0;
+border-bottom: 0.1px lightgrey solid;
+display: flex; 
+align-items: center;  
+}
+
+.boxlist {
+   
+    border: none !important;
+    margin: -47px 0 30px 10px;
+    mix-blend-mode: difference; 
+}
+
+
+.bonexmeter {
+    border-top: 40px #e7eaf1 solid;
+    border-radius: 10px;  
+    text-align: center; 
+    widt: calc(100% - 30px);
+    background: rgba(255,255,255,.8); 
+    
+}
+
+.bonexm {
+    mix-blend-mode: difference; 
+}
+
+
+
 .marquee {
   width: 100%;
   display: block;
@@ -361,7 +563,7 @@ width: 0;
 position: absolute; 
 right: 0;
 top: 0;
-margin: 3px 15px 10px 2px;
+margin: 8px 15px 0px 2px;
 font-size: 25px; 
 cursor: pointer;
     
